2011-09-22  Tom Sepez  <tsepez@chromium.org>

        Make XSSAuditor extract meaningful snippet from script blocks for comparison
        against the URL when checking for reflection.  Avoids getting caugh up in
        trailing comments.
        https://bugs.webkit.org/show_bug.cgi?id=68094

        Reviewed by Adam Barth.

        * http/tests/security/xssAuditor/resources/echo-intertag.pl:
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment.html: Added.
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment2-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment2.html: Added.
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment3-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-trailing-comment3.html: Added.

2011-09-22  Ben Wells  <benwells@chromium.org>

        Rebaseline for bug 65583 (path based border radius drawing on skia) part 5
        https://bugs.webkit.org/show_bug.cgi?id=68608

        Reviewed by James Robinson.

        * platform/chromium-linux/css2.1/: 14 changes
        * platform/chromium-linux/editing/execCommand/5138441-expected.png:
        * platform/chromium-linux/editing/inserting/editing-empty-divs-expected.png:
        * platform/chromium-linux/editing/selection/transformed-selection-rects-expected.png:
        * platform/chromium-linux/fast/: 9 changes
        * platform/chromium-win/css2.1/: 14 changes
        * platform/chromium-win/editing/execCommand/5138441-expected.png:
        * platform/chromium-win/editing/inserting/editing-empty-divs-expected.png:
        * platform/chromium-win/editing/selection/transformed-selection-rects-expected.png:
        * platform/chromium-win/fast/: 10 changes
        * platform/chromium/test_expectations.txt: