@@ -1,3 +1,13 @@
+2011-09-22  Anna Cavender  <annacc@chromium.org>
+
+        Adding testTracks() function to video-test.js
+        https://bugs.webkit.org/show_bug.cgi?id=68643
+
+        Reviewed by Eric Carlson.
+
+        * media/video-test.js:
+        (testTracks):
+
 2011-09-22  Tom Sepez  <tsepez@chromium.org>
 
         Make XSSAuditor extract meaningful snippet from script blocks for comparison
